cmake_minimum_required(VERSION 3.13)
project(mastermind)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(views/command)
include_directories(controllers)
include_directories(models)
include_directories(views)

add_executable(mastermind
        views/command/command.h
        views/command/continueroundcommand.cpp
        views/command/continueroundcommand.h
        views/command/exitcommand.cpp
        views/command/exitcommand.h
        views/command/loadcommand.cpp
        views/command/loadcommand.h
        views/command/redocommand.cpp
        views/command/redocommand.h
        views/command/savecommand.cpp
        views/command/savecommand.h
        views/command/startcommand.cpp
        views/command/startcommand.h
        views/command/undocommand.cpp
        views/command/undocommand.h
        controllers/colocatecontroller.cpp
        controllers/colocatecontroller.h
        controllers/compositeingamecontroller.cpp
        controllers/compositeingamecontroller.h
        controllers/compositeinitialcontroller.cpp
        controllers/compositeinitialcontroller.h
        controllers/continuecontroller.cpp
        controllers/continuecontroller.h
        controllers/controller.cpp
        controllers/controller.h
        controllers/ExitController.cpp
        controllers/ExitController.h
        models/game.cpp
        models/game.h
        controllers/logic.cpp
        controllers/logic.h
        controllers/startcontroller.cpp
        controllers/startcontroller.h
        controllers/state.h
        controllers/UndoController.cpp
        controllers/UndoController.h
        models/color.cpp
        models/color.h
        models/combination.cpp
        models/combination.h
        models/GameMemento.cpp
        models/GameMemento.h
        models/proposedcombination.cpp
        models/proposedcombination.h
        models/result.cpp
        models/result.h
        models/secretcombination.cpp
        models/secretcombination.h
        views/continueview.cpp
        views/continueview.h
        views/controllervisitor.h
        views/models/gameview.cpp
        views/models/gameview.h
        views/menuComposite/ingamemenuview.cpp
        views/menuComposite/ingamemenuview.h
        views/menuComposite/initialmenuview.cpp
        views/menuComposite/initialmenuview.h
        views/mastermindview.cpp
        views/mastermindview.h
        views/models/proposedcombinationview.cpp
        views/models/proposedcombinationview.h
        views/models/secretcombinationview.cpp
        views/models/secretcombinationview.h
        views/startview.cpp
        views/startview.h
        CMakeLists.txt
        main.cpp
        mastermind.cpp
        mastermind.h controllers/RedoController.cpp controllers/RedoController.h models/Registry.cpp models/Registry.h models/GameMementoInterface.h models/DAO/DAO.h models/DAO/GameDAO.cpp models/DAO/GameDAO.h models/DAO/SecretCombinationDAO.cpp models/DAO/SecretCombinationDAO.h models/DAO/CombinationDAO.h models/DAO/CombinationDAO.cpp models/DAO/ProposedCombinationDAO.cpp models/DAO/ProposedCombinationDAO.h models/DAO/ResultDAO.cpp models/DAO/ResultDAO.h controllers/SaveController.cpp controllers/SaveController.h)
